--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -44,7 +44,7 @@
   <hr />
 
   <table mat-table [dataSource]="incompleteLongTerm" *ngIf="!isLoading">
-    <ng-container matColumnDef="dateIn">
+    <ng-container matColumnDef="createdAt">
       <th mat-header-cell *matHeaderCellDef>Date in</th>
       <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.createdAt | date : 'dd/MM HH:mm' }}
@@ -120,17 +120,17 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="dateOut">
+    <ng-container matColumnDef="completedAt">
       <th mat-header-cell *matHeaderCellDef>Date out</th>
       <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '' }}
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
     <tr
       mat-row
-      *matRowDef="let row; columns: displayedColumns"
+      *matRowDef="let row; columns: columnHeaders"
       [ngClass]="row.completedAt ? 'completed' : ''"
       data-cy="long-term-list-entry"
     ></tr>
@@ -143,7 +143,7 @@
     <hr class="completed-hr" />
 
     <table mat-table [dataSource]="completedLongTerm" *ngIf="!isLoading">
-      <ng-container matColumnDef="dateIn">
+      <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef>Date in</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.createdAt | date : 'dd/MM HH:mm' }}
@@ -223,17 +223,17 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="dateOut">
+      <ng-container matColumnDef="completedAt">
         <th mat-header-cell *matHeaderCellDef>Date out</th>
         <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '' }}
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
       <tr
         mat-row
-        *matRowDef="let row; columns: displayedColumns"
+        *matRowDef="let row; columns: columnHeaders"
         [ngClass]="row.completedAt ? 'completed' : ''"
         data-cy="long-term-list-entry"
       ></tr>
