DEV-180 Fix announcement styling

--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-announcements-section/dashboard-announcement-section.component.scss
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-announcements-section/dashboard-announcement-section.component.scss
@@ -1,5 +1,9 @@
 .item-container {
   .announcement-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
     border: var(--border);
     border-radius: 5px;
     padding: 10px 10px;
