--- a/apps/frontend/src/app/pages/assignments/assignments.component.html
+++ b/apps/frontend/src/app/pages/assignments/assignments.component.html
@@ -26,8 +26,8 @@
       </td>
     </ng-container>
     <ng-container matColumnDef="comments">
-      <th mat-header-cell *matHeaderCellDef>Comments</th>
-      <td mat-cell *matCellDef="let item" class="comments-field">
+      <th class="extra-wide" mat-header-cell *matHeaderCellDef>Comments</th>
+      <td class="extra-wide" mat-cell *matCellDef="let item" class="comments-field">
         {{ item.comments }}
       </td>
     </ng-container>
@@ -83,8 +83,8 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="comments">
-        <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let item" class="comments-field">
+        <th class="extra-wide" mat-header-cell *matHeaderCellDef>Comments</th>
+        <td class="extra-wide" mat-cell *matCellDef="let item" class="comments-field">
           {{ item.comments }}
         </td>
       </ng-container>
