--- a/apps/frontend/src/app/pages/cars/cars.component.html
+++ b/apps/frontend/src/app/pages/cars/cars.component.html
@@ -46,8 +46,8 @@
     </ng-container>
 
     <ng-container matColumnDef="tagNr">
-      <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Tag nr.</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.tagNr }}
       </td>
     </ng-container>
@@ -144,8 +144,14 @@
     </ng-container>
 
     <ng-container matColumnDef="comments">
-      <th mat-header-cell *matHeaderCellDef>Comments</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
+      <th class="extra-wide" mat-header-cell *matHeaderCellDef>Comments</th>
+      <td
+        class="extra-wide"
+        mat-cell
+        *matCellDef="let item"
+        (click)="openEditDialog(item)"
+        class="comments-field"
+      >
         {{ item.comments }}
       </td>
     </ng-container>
@@ -191,8 +197,8 @@
       </ng-container>
 
       <ng-container matColumnDef="tagNr">
-        <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Tag nr.</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.tagNr }}
         </td>
       </ng-container>
@@ -293,8 +299,14 @@
       </ng-container>
 
       <ng-container matColumnDef="comments">
-        <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
+        <th class="extra-wide" mat-header-cell *matHeaderCellDef>Comments</th>
+        <td
+          class="extra-wide"
+          mat-cell
+          *matCellDef="let item"
+          (click)="openEditDialog(item)"
+          class="comments-field"
+        >
           {{ item.comments }}
         </td>
       </ng-container>
