--- a/apps/frontend/src/app/pages/checkout/checkout.component.html
+++ b/apps/frontend/src/app/pages/checkout/checkout.component.html
@@ -39,8 +39,8 @@
 
   <table mat-table [dataSource]="incompleteCheckouts" *ngIf="!isLoading">
     <ng-container matColumnDef="room">
-      <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Room nr.</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.room }}
       </td>
     </ng-container>
@@ -51,8 +51,8 @@
       </td>
     </ng-container>
     <ng-container matColumnDef="bags">
-      <th mat-header-cell *matHeaderCellDef>Nr. of<br />bags</th>
-      <td mat-cell *matCellDef="let item" (click)="viewFiles(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Nr. of<br />bags</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="viewFiles(item)">
         <div [ngClass]="item.files.length > 0 ? 'view-files-wrapper' : ''">
           <span *ngIf="item.files.length > 0" class="file-number">
             <img class="image-icon" src="assets/icons/view-files-icon.svg" alt="View files icon" />
@@ -63,14 +63,14 @@
       </td>
     </ng-container>
     <ng-container matColumnDef="tagNr">
-      <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Tag nr.</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.tagNr }}
       </td>
     </ng-container>
     <ng-container matColumnDef="bbDown">
-      <th mat-header-cell *matHeaderCellDef>BB down</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>BB down</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.bbDown }}
       </td>
     </ng-container>
@@ -81,26 +81,32 @@
       </td>
     </ng-container>
     <ng-container matColumnDef="bbLr">
-      <th mat-header-cell *matHeaderCellDef>BB<br />in LR</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>BB<br />in LR</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.bbLr }}
       </td>
     </ng-container>
     <ng-container matColumnDef="completedAt">
-      <th mat-header-cell *matHeaderCellDef>Time out</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Time out</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="bbOut">
-      <th mat-header-cell *matHeaderCellDef>BB out</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>BB out</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.bbOut }}
       </td>
     </ng-container>
     <ng-container matColumnDef="comments">
-      <th mat-header-cell *matHeaderCellDef>Comments</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
+      <th class="extra-wide" mat-header-cell *matHeaderCellDef>Comments</th>
+      <td
+        class="extra-wide"
+        mat-cell
+        *matCellDef="let item"
+        (click)="openEditDialog(item)"
+        class="comments-field"
+      >
         {{ item.comments }}
       </td>
     </ng-container>
@@ -121,8 +127,8 @@
 
     <table mat-table [dataSource]="completeCheckouts" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
-        <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Room nr.</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.room }}
         </td>
       </ng-container>
@@ -135,8 +141,8 @@
       </ng-container>
 
       <ng-container matColumnDef="bags">
-        <th mat-header-cell *matHeaderCellDef>Nr. of<br />bags</th>
-        <td mat-cell *matCellDef="let item" (click)="viewFiles(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Nr. of<br />bags</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="viewFiles(item)">
           <div [ngClass]="item.files.length > 0 ? 'view-files-wrapper' : ''">
             <span *ngIf="item.files.length > 0" class="file-number">
               <img
@@ -152,15 +158,15 @@
       </ng-container>
 
       <ng-container matColumnDef="tagNr">
-        <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Tag nr.</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.tagNr }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbDown">
-        <th mat-header-cell *matHeaderCellDef>BB down</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>BB down</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbDown }}
         </td>
       </ng-container>
@@ -173,29 +179,35 @@
       </ng-container>
 
       <ng-container matColumnDef="bbLr">
-        <th mat-header-cell *matHeaderCellDef>BB<br />in LR</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>BB<br />in LR</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbLr }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="completedAt">
-        <th mat-header-cell *matHeaderCellDef>Time out</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Time out</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbOut">
-        <th mat-header-cell *matHeaderCellDef>BB out</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>BB out</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbOut }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="comments">
-        <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
+        <th class="extra-wide" mat-header-cell *matHeaderCellDef>Comments</th>
+        <td
+          class="extra-wide"
+          mat-cell
+          *matCellDef="let item"
+          (click)="openEditDialog(item)"
+          class="comments-field"
+        >
           {{ item.comments }}
         </td>
       </ng-container>
