--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -45,15 +45,15 @@
 
   <table mat-table [dataSource]="incompleteLongTerm" *ngIf="!isLoading">
     <ng-container matColumnDef="createdAt">
-      <th mat-header-cell *matHeaderCellDef>Date in</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Date in</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.createdAt | date : 'dd/MM HH:mm' }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="room">
-      <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Room nr.</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.room }}
       </td>
     </ng-container>
@@ -66,8 +66,8 @@
     </ng-container>
 
     <ng-container matColumnDef="nrOfBags">
-      <th mat-header-cell *matHeaderCellDef>Nr. <br />of bags</th>
-      <td mat-cell *matCellDef="let item" (click)="viewFiles(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Nr. <br />of bags</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="viewFiles(item)">
         <div [ngClass]="item.files.length > 0 ? 'view-files-wrapper' : ''">
           <span *ngIf="item.files.length > 0" class="file-number">
             <img class="image-icon" src="assets/icons/view-files-icon.svg" alt="View files icon" />
@@ -79,43 +79,49 @@
     </ng-container>
 
     <ng-container matColumnDef="comments">
-      <th mat-header-cell *matHeaderCellDef>Comments</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
+      <th class="extra-wide" mat-header-cell *matHeaderCellDef>Comments</th>
+      <td
+        class="extra-wide"
+        mat-cell
+        *matCellDef="let item"
+        (click)="openEditDialog(item)"
+        class="comments-field"
+      >
         {{ item.comments }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="tagNr">
-      <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Tag nr.</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.tagNr }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="dateNeeded">
-      <th mat-header-cell *matHeaderCellDef>Date needed</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Date needed</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.dateNeeded ? (item.dateNeeded | date : 'dd/MM') : '' }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="bbLr">
-      <th mat-header-cell *matHeaderCellDef>BB <br />in LR</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>BB <br />in LR</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.bbLr }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="location">
-      <th mat-header-cell *matHeaderCellDef>Location</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>Location</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.location }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="bbOut">
-      <th mat-header-cell *matHeaderCellDef>BB out</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+      <th class="narrow" mat-header-cell *matHeaderCellDef>BB out</th>
+      <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
         {{ item.bbOut }}
       </td>
     </ng-container>
@@ -144,15 +150,15 @@
 
     <table mat-table [dataSource]="completedLongTerm" *ngIf="!isLoading">
       <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>Date in</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Date in</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.createdAt | date : 'dd/MM HH:mm' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="room">
-        <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Room nr.</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.room }}
         </td>
       </ng-container>
@@ -165,8 +171,8 @@
       </ng-container>
 
       <ng-container matColumnDef="nrOfBags">
-        <th mat-header-cell *matHeaderCellDef>Nr. <br />of bags</th>
-        <td mat-cell *matCellDef="let item" (click)="viewFiles(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Nr. <br />of bags</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="viewFiles(item)">
           <div [ngClass]="item.files.length > 0 ? 'view-files-wrapper' : ''">
             <span *ngIf="item.files.length > 0" class="file-number">
               <img
@@ -182,43 +188,49 @@
       </ng-container>
 
       <ng-container matColumnDef="comments">
-        <th mat-header-cell *matHeaderCellDef>Comments</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
+        <th class="extra-wide" mat-header-cell *matHeaderCellDef>Comments</th>
+        <td
+          class="extra-wide"
+          mat-cell
+          *matCellDef="let item"
+          (click)="openEditDialog(item)"
+          class="comments-field"
+        >
           {{ item.comments }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="tagNr">
-        <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Tag nr.</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.tagNr }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="dateNeeded">
-        <th mat-header-cell *matHeaderCellDef>Date needed</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Date needed</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.dateNeeded ? (item.dateNeeded | date : 'dd/MM') : '' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbLr">
-        <th mat-header-cell *matHeaderCellDef>BB <br />in LR</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>BB <br />in LR</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbLr }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="location">
-        <th mat-header-cell *matHeaderCellDef>Location</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>Location</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.location }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="bbOut">
-        <th mat-header-cell *matHeaderCellDef>BB out</th>
-        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+        <th class="narrow" mat-header-cell *matHeaderCellDef>BB out</th>
+        <td class="narrow" mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
           {{ item.bbOut }}
         </td>
       </ng-container>
