--- a/apps/frontend/src/app/pages/cars/cars.component.html
+++ b/apps/frontend/src/app/pages/cars/cars.component.html
@@ -157,15 +157,15 @@
     </ng-container>
 
     <ng-container matColumnDef="charged">
-      <th mat-header-cell *matHeaderCellDef>Charged</th>
-      <td mat-cell *matCellDef="let item">
+      <th class="default-width" mat-header-cell *matHeaderCellDef>Charged</th>
+      <td class="default-width" mat-cell *matCellDef="let item">
         <label class="checkbox-container car-checkbox">
           <input
             type="checkbox"
             [checked]="item.charged"
             (change)="updateCharge(item.carId, item.charged)"
           />
-          <span class="checkmark"></span>
+          <span class="checkmark" style="top: 0; margin-left: 20px"></span>
         </label>
       </td>
     </ng-container>
@@ -312,15 +312,15 @@
       </ng-container>
 
       <ng-container matColumnDef="charged">
-        <th mat-header-cell *matHeaderCellDef>Charged</th>
-        <td mat-cell *matCellDef="let item">
+        <th class="default-width" mat-header-cell *matHeaderCellDef>Charged</th>
+        <td class="default-width" mat-cell *matCellDef="let item">
           <label class="checkbox-container car-checkbox">
             <input
               type="checkbox"
               [checked]="item.charged"
               (change)="updateCharge(item.carId, item.charged)"
             />
-            <span class="checkmark"></span>
+            <span class="checkmark" style="top: 0; margin-left: 20px"></span>
           </label>
         </td>
       </ng-container>
