--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
@@ -8,6 +8,8 @@
   min-width: 250px;
   max-width: 500px;
   position: relative;
+  margin-right: 10px;
+  margin-bottom: 10px;
 
   .image-container {
     display: flex;
@@ -27,10 +29,11 @@
     }
 
     .image {
-      height: 100%;
+      height: 95%;
       width: 100%;
       max-width: 80%;
       object-fit: contain;
+      margin-top: 5px;
     }
   }
 
@@ -48,7 +51,6 @@
 
     .name-container {
       margin: 10px 10px 0 10px;
-      font-weight: 900;
       white-space: nowrap;
       text-overflow: ellipsis;
       width: 100%;
