--- a/apps/frontend/src/app/pages/blacklist/blacklist.component.scss
+++ b/apps/frontend/src/app/pages/blacklist/blacklist.component.scss
@@ -1,5 +1,5 @@
 .blacklist-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(24%, 1fr));
-  gap: 1em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
