Removed cypress intercept and fixed some stuff with updating

--- a/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
@@ -100,7 +100,7 @@
   </mat-form-field>
 
   <div class="dialog-row">
-    <button mat-raised-button class="secondary-btn" mat-dialog-close>Cancel</button>
+    <button mat-raised-button class="secondary-btn" mat-dialog-close data-cy="create-dialog-cancel-button">Cancel</button>
     <button mat-raised-button class="action-btn" type="submit">
       <div *ngIf="!isLoading">Create</div>
       <div *ngIf="isLoading" class="btn-spinner">
